src/index.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Basic Styling */

* {
  margin: 0;
  box-sizing: border-box;
}

/* Typography */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Player Display';
  font-weight: normal;
}

p {
  font-family: 'Roboto';
}

/* About Me Section */

.content {
  overflow-x: hidden;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 2px solid green; */
}

.about-me {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.about-me-image-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  height: 450px;
  width: 90vw;
  padding: 1em;
}

.about-me-img {
  width: 100%;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
  height: 100%;
  object-fit: cover;
}

.about-me-name {
  position: absolute;
  bottom: 30px;
  font-size: 12vw;
  text-shadow: 0px 5px 10px gray;
  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
    1px 1px 0 #000, 0 10px 10px gray;
  color: white;
}

.about-me-text {
  width: 90vw;
  margin-top: 1rem;
}

.about-me-text > h2 {
  font-weight: 500;
  font-size: 10vw;
  text-align: center;
}

.about-me-text > p {
  line-height: 1.5;
  font-size: 1.25rem;
  opacity: 0.8;
}

.background-accent-container {
  position: absolute;
  z-index: -1;
  filter: drop-shadow(0px 5px 5px rgba(50, 50, 0, 0.5));
}

.background-accent {
  background-color: #0891b2;
  height: 400px;
  width: 100vw;
  clip-path: polygon(0 0, 100% 0, 100% 60%, 0 100%);
}

.social-links {
  font-size: 10vw;
  margin-top: 1rem;
}

.social-links > i {
  padding: 0.5rem;
}

/* Projects */

.my-work {
  margin-top: 16em;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 2px solid red; */
}

.my-work > h2 {
  padding-bottom: 0.5em;
  font-size: 3rem;
}

.proj {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 2px solid green; */
  width: 100%;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 6px 1px,
    rgba(0, 0, 0, 0.06) 0px 2px 4px 1px;
  margin-bottom: 4em;
}

.projects-container {
  width: 90%;
}

.proj-img {
  aspect-ratio: 1 / 1;
  height: 100%;
  width: 100%;
  font-weight: normal;
  background-color: #7c75ca;
  display: flex;
  align-items: center;
  justify-content: center;
}

.proj-img > p {
  color: white;
  text-align: center;
  font-family: 'Player Display';
  width: 75%;
}

.imgNum2 {
  background-color: #d88f39;
}

.imgNum3,
.imgNum6 {
  background-color: #5e8f4d;
}

.imgNum4 {
  background-color: #ca7599;
}

.imgNum5 {
  background-color: #4692d9;
}

.proj-text {
  /* border: 2px solid purple; */
  overflow: scroll;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.proj-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-top: 1rem;
  padding-left: 2rem;
  padding-right: 1rem;
  font-family: 'Playfair Display';
}

.proj-header h3 {
  font-size: 1.5rem;
}

.proj-links {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 1rem;
}

.link-icon,
.proj-links i {
  width: 1.5rem;
  font-size: 1.5rem;
}

.proj-desc {
  padding: 1rem 1rem 4rem 1rem;
  opacity: 0.9;
  font-family: 'Roboto';
}

/* Footer */

footer {
  background-color: #0891b2;
}

.contact-me {
  color: white;
  display: flex;
  flex-direction: column;
  padding: 2em 2em;
}

.contact-me h2 {
  font-size: 3rem;
  text-align: center;
}

.contact-message {
  font-size: 1.5rem;
  margin-top: 1rem;
}

.contact-addr,
.other-contact {
  opacity: 0.9;
  margin-top: 1.5rem;
}

.phoneNum {
  margin-top: 1.5rem;
}

.contact-me-links {
  color: black;
  width: 100%;
  display: flex;
  justify-content: center;
  font-size: 2.5rem;
  margin-top: 1.5rem;
  gap: 2rem;
}

.closing-img {
  object-fit: cover;
  object-position: 65% 50%;
  height: 600px;
  width: 100vw;
  margin: 0;
}

@media screen and (min-width: 600px) {
  body {
    background-color: white;
  }

  .background-accent {
    background-color: #0891b2;
    width: 100vw;
    height: 500px;
    clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%);
  }

  .about-me {
    background-color: white;
    margin: 10em;
    padding: 0;
    font-size: 12px;
    flex-direction: row;
    display: block;
    width: 80vw;
    /* border: 2px solid red; */
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
  }

  .about-me-text {
    padding: 6em 3vw;
    /* border: 2px solid green; */
    width: 100%;
  }

  .spacer {
    width: 46vw;
    height: 355px;
    float: left;
    /* background-color: white; */
  }

  .about-me-text > h2 {
    font-size: 3rem;
    margin-bottom: 1rem;
  }

  .about-me-text > p {
    font-size: 1.25rem;
  }

  .about-me-image-container {
    align-items: center;
    position: absolute;
    top: 30px;
    left: 30px;
    margin: 0;
    padding: 0px;
    width: 50vw;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
  }

  .about-me-name {
    font-size: 3rem;
    top: 0;
    right: -30vw;
  }

  .social-links {
    display: none;
  }

  .my-work {
    margin-top: 4rem;
    width: 80vw;
  }

  .my-work > h2 {
    text-align: left;
    width: 100%;
  }

  .proj {
    width: calc(40vw - 1rem);
  }

  .projects-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
    gap: 2rem;
  }

  .proj-text {
    height: 100%;
  }

  .proj-img {
    height: 80%;
  }

  .proj-desc {
    flex-grow: 1;
  }
}

@media screen and (min-width: 1024px) {
  body {
    background-color: pink;
  }
}

